# 11labs-microservices

./: .prettierrc  docker-compose.yaml  package.json  pnpm-lock.yaml
services/auth/: Dockerfile  package.json
services/auth/src/: server.ts
services/auth/src/lib/: crypto.ts
services/auth/src/plugins/: jwt.ts  logger.ts
services/auth/src/routes/: api-keys.ts  auth.ts
services/gateway/: dynamic.yaml  traefik.yaml
services/tts/: Dockerfile  pyproject.toml
services/voice/: Dockerfile  package.json
services/voice/src/: server.ts
services/voice/src/lib/: crypto.ts  storage.ts
services/voice/src/plugins/: logger.ts
services/voice/src/routes/: library.ts  samples.ts  voices.ts
services/worker/: Dockerfile  package.json  tsconfig.json
services/worker/src/: server.ts
services/worker/src/lib/: crypto.ts  processor.ts  queue.ts  storage.ts  tts-client.ts
services/worker/src/plugins/: jwt.ts  logger.ts
services/worker/src/routes/: tts.ts
