[project]
name = "tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "kokoro>=0.9.4",
    "misaki[en]>=0.8.0",
    "numpy>=1.26.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pydub>=0.25.0",
    "soundfile>=0.12.0",
    "uvicorn[standard]>=0.34.0",
]
